styles.css
.topsection{display: flex;}

.header-section {
display: flex;
 background-image: url(./saas-project-assets/backgrounds/background-top.svg);
 background-color: #ffffff;
 background-size: cover;
 height: 100%;
 background-position: center;
 background-repeat: no-repeat;
 padding-top: 3rem;
}

.navbar{
    width: 100%;
    position: fixed;
    transition: ease-in-out 0.3s;
    background-color: rgba(255, 255, 255, 0.281);
    z-index: 1000;
    padding-bottom: 0.63rem;
}

 .navbar-toggler span, .navbar-brand {color: rgb(255, 255, 255);}

.navbar-toggler {
    position: absolute;
    right: 1.25rem;
    top: 0.625rem;
    outline: none;
    background-color: transparent;
    border: 0.0625rem solid transparent;
}

.navbar-toggler span {
   color:  #666;
   font-size: 1.25rem;
   cursor: pointer; 
   pointer-events: none;
}

.navbar-brand{
    width: 9.68125rem;
    height: 2.88125rem;
}
#selected-nav a {color:#2476FF;}

[aria-controls="navbarDropdown"] {
    display: none;
}

.nav-list{
    display: flex;
    align-items: center;   
}

.nav-link a {
    color:#677788;
     font-size: 0.875rem;
     font-weight: 600;
     font-family: "hind", sans-serif;
     text-transform: uppercase;
     margin-right: 2.5rem;
     line-height: 1.25rem;
    }

.topsection{ width: 100%}

.hero-content{padding: 0 2rem 6rem 2rem;}

.hero-section{
    display: flex;
    width: 100%;
    gap: 10.625rem;
    place-content: center;
    align-items: center;
    background-color: #f7f7f7;
}

.left-bottom-person{
    display: flex;
    flex-direction: column;
}

.left-btns{
    display: flex;
    align-items: center;
    gap: 1.5rem;
    align-self: stretch;
}
.left-btns span a, .left-banner span a{
   display: flex;
   border: 0.0625rem transparent;
   border-radius: 1.875rem;
   background: #2476FF;
   padding: 0.9375rem 1.5625rem;
   align-items: center;
   gap: 0.5rem;
   color: white;
}
.left-part{
    display: flex;
    padding: 0 0 1rem 3.75rem;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    flex: 1;
    align-self: stretch;
}

.left-part h1 {  
    font-size: 2.5rem;
    width: 17.1875rem;
    margin-bottom: 0;
}

.left-part p {
    color: #666;
    margin:1.88rem 0 1.88rem 0;
}

.right-part{
    display:flex;
    height: 28rem;
    flex: 1;
    place-content: space-evenly;
    padding-top: 4rem;
}

.right-part img {
   display: flex;
  height: 3.25rem;
  padding: 1rem;
  border-radius: 2.5rem;
  align-items: flex-start;
  flex-shrink: 0;
  background: #FFF;
  box-shadow: 0px 0.1875rem 0.8125rem 0px rgba(0, 0, 0, 0.25);
  overflow: unset;
}

.right-part img:nth-child(1){
    position: relative;
    top: 3.25rem;
    left: 0.5rem;
    height: 2rem;
}
.right-part img:nth-child(2){
    position: relative;
    top:3.25rem;
    left:4.9rem;
}
.right-part img:nth-child(3){
    position: relative;
    top: 3.25rem;
    left: 17rem;
}
.right-part img:nth-child(4){
    position: relative;
    right: 18.5rem;
    top: 14rem;
}
.right-part img:nth-child(5){
    position: relative;
  top: 14rem;
  right: 3.45rem;
}
.right-part img:nth-child(6){
    position: relative;
    right: 25rem;
    top: 22.5rem;
    height: 2rem;
}
.right-part img:nth-child(7){
    position: relative;
    top: 24rem;
    right: 6rem;
}

.benefits{
    display: flex;
    padding: 7.5rem 0rem 5rem 0rem;
    flex-direction: column;
    align-items: center;
    gap: 3.75rem;
    align-self: stretch;
  }

.benefits-header{
    text-align: center;
 padding: 0.25rem;
}
.benefits-header h1 {margin: 0;}

.benefits-list {
    display: flex;
    align-self: center;
    gap: 2rem;
  }

.benefits p {
    line-height: 2rem;
    color: #677788;;
    margin: 0;
    font-size: 1.3rem;
    padding-bottom: 1.25rem;
  }

.benefits-header p {
    margin-top: 0.63rem;
    font-size: 1.28rem;
    font-weight: 500;
}

.benefits a{font-size: 1rem;}
   
  .card1, .card2, .card3, .card4 {
    display: flex;
    flex-direction: column;
    border: 0.0625rem solid #FFF;
    background: #FFF;
    box-shadow: 0px 0.625rem 1.25rem 0px rgba(0, 0, 0, 0.15);
    padding: 1.25rem;
    width: 16.375rem;
    align-items: flex-start;
  }

.card1 img, .card2 img, .card3 img, .card4 img, .top-plan-left img, .top-plan-right img, .bottom-plan-left img, .bottom-plan-right img {
    width: 3.25rem;
    height: 3.25rem
  }

.sketch {
border: 0.0625rem transparent;
border-radius: 1rem;
background-color: rgba(1, 201, 167, 1);
color: white;
padding: 0.25rem 0.63rem;
font-weight: 800;
}

.banner-section{
    display: flex;
    justify-content: space-between;
    margin: 0 0 5rem 1.8rem;   
    gap: 0.63rem;
}

.left-banner{
    display: flex;
    width: 28.125rem;
    padding: 0.625rem 1.875rem;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
}

.left-banner p{
    font-size: 1.625rem;
}

.right-banner{
    display: flex;
    flex: 1;
    justify-content: flex-end;
}

.right-banner img { 
    margin-top: 9rem;
    margin-bottom: -0.25rem;
}

.why{
    display: flex;
    width: 75%;
    text-align: center;
    margin: auto;
    place-content: center;
}

.why-header p {
    font-size: 1.5rem;
    color: grey;
    margin-bottom: 2.5rem;
    padding-left: 7rem;
    padding-right: 7rem;
}

.bull-list {
    margin-top: 2.5rem;
    margin-bottom: 5rem;
    display: flex;
    justify-content: center;
    place-self: center;
}

.bull-box{
    display: flex;
    flex-direction: column;
}

.bull-box h3 {
    color:#3d4044;
    text-align: center;
    font-weight: 400;
}

.bull-line{
    display: flex;
    align-items: center;
}

.line{
    background-color: #d1dde8;
    height: 0.23rem;
    width: 8rem;   
}

.white{
    color: white;
    background-color: white;
}
/* ... */

